[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Z-Image-Turbo-Lora-Stack-V4"
version = "1.3.0"
description = "ZImage Turbo LoRA Stack V4 custom node for ComfyUI."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "torch"
]
classifiers = [
  "Operating System :: OS Independent",
  "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/aistudynow/Z-Image-Turbo-Lora-Stack-V4"
"Bug Tracker" = "https://github.com/aistudynow/Z-Image-Turbo-Lora-Stack-V4/issues"

[tool.comfy]
PublisherId = "aistudynow"
PackageId = "Z-Image-Turbo-Lora-Stack-V4"
DisplayName = "ZImage Turbo LoRA Stack V4"
Description = "ZImage Turbo LoRA Stack V4 custom node for ComfyUI."
Repository = "https://github.com/aistudynow/Z-Image-Turbo-Lora-Stack-V4"
requires-comfyui = ">=0.3.0"

[tool.comfy.nodes]
ZImageTurboLoraStackV4 = "zimage_turbo_lora_stack_v4:ZImageTurboLoraStackV4"

